--- a/index.html
+++ b/index.html
@@ -4,38 +4,37 @@
 <head>
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body onload="onloadFun()">
 
-        <div class="row align-items-start comic-detail-page m-90">
+        <div class="row align-items-start comic-detail-page">
                 <img id="comic_image" height="700px" src="" alt="img" class="rounded mr-5">
 
-                <div class="column" style="padding-inline: 0px;">
+                <div class="column" style="width: 800px;">
 
-                        <h1 id="name" class="text-light">
-                                </h2>
-                                <h2 class="text-light">Published:</h2>
-                                <p id="publish_date" class="font-weight-bold"> </p>
-                                <div class="row" style="padding-left: 16px">
+                        <h1 id="name" class="text-light"></h1>
+                        <h2 class="text-light">Published:</h2>
+                        <p id="publish_date" class="font-weight-light"> </p>
 
-                                        <div class="column">
-                                                <h2 class="text-light">Writer:</h2>
-                                                <p id="writer" class="font-weight-bold"> </p>
-                                        </div>
+                        <div class="row" style="padding-left: 16px">
 
-                                        <div class="column hor-padding">
-                                                <h2 class="text-light">Penclier:</h2>
-                                                <p id="penclier" class="front-weight-bold"> </p>
+                                <div class="column">
+                                        <h2 class="text-light">Writer:</h2>
+                                        <p id="writer" class="font-weight-bold"> </p>
+                                </div>
 
-                                        </div>
+                                <div class="column hor-padding">
+                                        <h2 class="text-light">Penclier:</h2>
+                                        <p id="penclier" class="front-weight-bold"> </p>
 
                                 </div>
-                                <h2 class="text-light">Cover Artist:</h2>
-                                <p id="cover_artist" class="font-weight-bold"> </p>
-                                <br>
-                                <p id="description" style="width:800px ;"></p>
+
+                        </div>
+                        <h2 class="text-light">Cover Artist:</h2>
+                        <p id="cover_artist" class="font-weight-bold"> </p>
+                        <br>
+                        <p id="description" ></p>
 
                 </div>
 
@@ -49,10 +48,12 @@
 
 
         <script src="js/bootstrap.js"></script>
-        <script src="js/comic_details.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="js/jquery-3.6.1.min.js"></script>
         <script src="js/popper.min.js"></script>
+
+        <script src="js/comic_details.js"></script>
+
+        <script src="js/jquery-3.6.1.min.js"></script>
+
 
 </body>
 
